[package]
name = "dedekind_numbers"
version = "0.1.0"
edition = "2021"
authors = ["郭浩 <kormanwork@gmail.com>"]
repository = "https://github.com/korman/dedekind_numbers.git"
license = "MIT"
readme = "README.md"
description = "Dedekind numbers"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
